--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <!-- Switch de Acessibilidade -->
         <div id="accessibility-switch" aria-label="Modo acessível">
             <button id="accessibility-toggle">Ativar Modo Acessível</button>
-            <!-- <button id="libras-toggle">Ativar Libras</button> -->
+             <button id="libras-toggle">Ativar Libras</button> 
         </div>
 
         <!-- Seção principal -->
